2011-04-15  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-LAMBDABODY): issue a style-warning when lambda
	list contains both &optional and &key

2011-04-12  Sam Steingold  <sds@gnu.org>

	On Max OS X the value of *PATHNAME-ENCODING* is set to UTF-8 and cannot
	be changed because MacOSX pathnames are UTF-8 strings, not byte
	sequences (http://thread.gmane.org/gmane.lisp.clisp.general/13725
	and http://developer.apple.com/library/mac/#qa/qa2001/qa1173.html)
	* lispbibl.d (CONSTANT_PATHNAME_ENCODING) [UNIX_MACOSX]: define to UTF-8
	* encoding.d (init_dependent_encodings) [CONSTANT_PATHNAME_ENCODING]:
	set O(pathname_encoding) to CONSTANT_PATHNAME_ENCODING
	(SYSTEM::SET-PATHNAME-ENCODING): signal an error when the encoding
	argument is not CONSTANT_PATHNAME_ENCODING
	* spvw.d (argv_encoding_pathname): do not define when
	CONSTANT_PATHNAME_ENCODING is defined
	(parse_options): do not accept -Epathname
	* makemake.in (encflags) [TSYSOS=darwin]: do not add -Epathname
	Thanks to Carlos Ungil <carlos.ungil@gmail.com> for testing.

2011-04-10  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (wait, waitpid): restore (revert
	the 2011-03-23 patch); recommend POSIX:WITH-SUBPROCESSES in comments

2011-04-09  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:SERVICE): fix non-missing
	protocol handling (bug#3280915)

2011-04-08  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_sigpipe.d [MULTITHREAD, UNIX_MACOSX, GENERATIONAL_GC]:
	patch for strange SIGPIPE delivered to libsigsegv thread

2011-04-06  Sam Steingold  <sds@gnu.org>

	fix bug#3182597: WRITE-BYTE-SEQUENCE :no-hang t is only for byte vectors
	* sequence.d (WRITE-BYTE-SEQUENCE): implement "persev !=
	persev_full" for sequences other than (VECTOR (UNSIGNED-BYTE 8))

2011-04-06  Sam Steingold  <sds@gnu.org>

	* sequence.d (interactive_no_hang): new function
	(READ-BYTE-SEQUENCE, WRITE-BYTE-SEQUENCE): use it

2011-04-06  Sam Steingold  <sds@gnu.org>
